# cucurucho

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  constants.h  main.cpp  startserver.sh
classes/: Configuracion.cpp  Configuracion.h  Enemigo1.cpp  Enemigo1.h  Enemigo2.cpp  Enemigo2.h  Fondo.cpp  Fondo.h  GeneradorDeTexturas.cpp  GeneradorDeTexturas.h  GraphicRenderer.cpp  GraphicRenderer.h  Helper.cpp  Helper.h  Hud.cpp  Hud.h  Jugador.cpp  Jugador.h  Log.cpp  Log.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  VentanaJuego.h
classes/config/: Configuracion.cpp  Configuracion.h  ConfiguracionParser.cpp  ConfiguracionParser.h  EnemigosConfiguracion.h  FondoConfiguracion.cpp  NivelConfiguracion.cpp  NivelConfiguracion.h
classes/model/: Campo.cpp  Campo.h  CampoMovil.cpp  CampoMovil.h  Enemigo1.cpp  Enemigo1.h  Enemigo2.cpp  Enemigo2.h  Entidad.h  Helper.cpp  Helper.h  Hud.cpp  Hud.h  Jugador.cpp  Jugador.h  ManagerNiveles.cpp  ManagerNiveles.h  Nivel.cpp  Nivel.h  NivelIntermedio.cpp  NivelIntermedio.h  SemillaEntidad.h  Ticker.h  Titulo.cpp  VentanaJuego.cpp  VentanaJuego.h
classes/view/: CampoVista.cpp  CampoVista.h  Colores.h  Enemigo1Vista.cpp  Enemigo1Vista.h  Enemigo2Vista.cpp  Enemigo2Vista.h  FondoVista.cpp  FondoVista.h  HelperVista.cpp  HelperVista.h  HudVista.cpp  HudVista.h  JugadorView.cpp  JugadorView.h  JugadorVista.cpp  JugadorVista.h  NivelIntermedioVista.cpp  NivelIntermedioVista.h  TextoView.cpp  TextoView.h  TextoVista.cpp  TextoVista.h  TituloVista.cpp  TituloVista.h  VentanaJuegoVista.cpp  VentanaJuegoVista.h
client/: CMakeLists.txt  main.cpp
client/classes/: Audio.cpp  Audio.h  EfectoSonido.cpp  EfectoSonido.h  GeneradorDeTexturas.cpp  GeneradorDeTexturas.h  GestorSDL.cpp  GestorSDL.h  GraphicRenderer.cpp  HiloConexionCliente.cpp  HiloConexionCliente.h  Log.cpp  Log.h  ManagerJuego.cpp  ManagerJuego.h  Musica.cpp  Musica.h  Partida.cpp  Partida.h  Utils.h
client/classes/config/: Configuracion.cpp  Configuracion.h  ConfiguracionParser.cpp  ConfiguracionParser.h  FondoConfiguracion.h  NivelConfiguracion.cpp  NivelConfiguracion.h
client/classes/model/: Nivel.h
client/classes/view/: CampoVista.cpp  CampoVista.h  Colores.h  DisparoEnemigoVista.cpp  DisparoEnemigoVista.h  DisparoJugadorVista.cpp  DisparoJugadorVista.h  Enemigo1Vista.cpp  Enemigo1Vista.h  Enemigo2Vista.cpp  Enemigo2Vista.h  EnemigoFinal1Vista.cpp  EnemigoFinal1Vista.h  ExplosionVista.cpp  ExplosionVista.h  FondoVista.cpp  FondoVista.h  HelperVista.cpp  HelperVista.h  HudVista.cpp  HudVista.h  IndicadorSonidoVista.cpp  IndicadorSonidoVista.h  JugadorVista.cpp  JugadorVista.h  ManagerVista.cpp  ManagerVista.h  NivelIntermedioVista.cpp  NivelIntermedioVista.h  TextoVista.cpp  TextoVista.h  Titulo.cpp  Titulo.h  TituloVista.cpp  TituloVista.h  ToastVista.cpp  ToastVista.h
client/classes/view/elements/: DisparoEnemigoVista.cpp  DisparoEnemigoVista.h  DisparoHelperVista.cpp  DisparoHelperVista.h  DisparoJugadorVista.cpp  DisparoJugadorVista.h  Enemigo1Vista.cpp  Enemigo1Vista.h  Enemigo2Vista.cpp  Enemigo2Vista.h  EnemigoFinal1ExtVista.cpp  EnemigoFinal1ExtVista.h  EnemigoFinal1Vista.cpp  EnemigoFinal1Vista.h  ExplosionVista.cpp  ExplosionVista.h  FondoVista.cpp  FondoVista.h  HelperVista.cpp  HelperVista.h  JugadorVista.cpp  JugadorVista.h
client/config/: backup.json  config.json  dist.json
client/config/fondos/: fondos4.json
commons/: ColaBloqueante.h  Thread.cpp  Thread.h
commons/connections/: AceptadorConexiones.cpp  AceptadorConexiones.h  AceptarConexionExcepcion.h  Conexion.cpp  Conexion.h  ConexionCliente.cpp  ConexionCliente.h  ConexionExcepcion.h  ConexionServidor.cpp  ConexionServidor.h  ConexionUtils.h  ControladorDeSesiones.cpp  ControladorDeSesiones.h  IniciadorComunicacion.cpp  IniciadorComunicacion.h
commons/protocols/: protocolo.h
commons/utils/: Constantes.h  Log.cpp  Log.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h
config/: backup.json  config.json  fondos.json
config/fondos/: fondos1.json  fondos3.json
log/: log-250420-222858.txt
server/: main.cpp  usuarios.json
server/classes/: HiloAceptadorConexiones.cpp  HiloAceptadorConexiones.h  HiloConexionServidor.cpp  HiloConexionServidor.h  HiloOrquestadorPartida.cpp  HiloOrquestadorPartida.h  PaqueteUsuario.cpp  PaqueteUsuario.h
server/classes/config/: Configuracion.cpp  Configuracion.h  ConfiguracionParser.cpp  ConfiguracionParser.h  EnemigosConfiguracion.cpp  EnemigosConfiguracion.h  FondoConfiguracion.cpp  FondoConfiguracion.h  NivelConfiguracion.cpp  NivelConfiguracion.h  UsuariosConfiguracion.cpp  UsuariosConfiguracion.h
server/classes/model/: CampoMovil.cpp  CampoMovil.h  Disparo.cpp  Disparo.h  Enemigo1.cpp  Enemigo1.h  Enemigo2.cpp  Enemigo2.h  EnemigoFinal1.cpp  EnemigoFinal1.h  EnemigoFinal1Ext.cpp  EnemigoFinal1Ext.h  Entidad.h  EntidadEnemigo.h  ExtensionNivel.cpp  ExtensionNivel.h  Helper.cpp  Helper.h  Hud.cpp  Hud.h  Jugador.cpp  Jugador.h  ManagerNiveles.cpp  ManagerNiveles.h  Nivel.cpp  Nivel.h  NivelIntermedio.cpp  NivelIntermedio.h  Partida.cpp  Partida.h  SemillaEntidad.cpp  SemillaEntidad.h  Ticker.h  Titulo.cpp  Titulo.h  VidaJugador.cpp  VidaJugador.h
server/classes/model/ais/: IAEnemigo.h  IAEnemigoPatron1.cpp  IAEnemigoPatron1.h  IAEnemigoPatron2.cpp  IAEnemigoPatron2.h  IAEnemigoPatron3.cpp  IAEnemigoPatron3.h  IAEnemigoPatron3Ext.cpp  IAEnemigoPatron3Ext.h  IARotativaDesdeIzquierda.cpp  IARotativaDesdeIzquierda.h
server/classes/model/entities/: Entidad.cpp  Entidad.h  Forma.cpp  Forma.h
server/classes/model/life/: VidaEnemigo1.cpp  VidaEnemigo1.h  VidaEnemigo2.cpp  VidaEnemigo2.h  VidaEnemigoFinal1.cpp  VidaEnemigoFinal1.h  VidaEnemigoFinal1Ext.cpp  VidaEnemigoFinal1Ext.h  VidaEntidad.cpp  VidaEntidad.h  VidaInvensible.cpp  VidaInvensible.h  VidaJugador.cpp  VidaJugador.h  VidaJugadorInvencible.cpp  VidaJugadorInvencible.h  VidaJugadorMortal.cpp  VidaJugadorMortal.h  VidaProyectil.cpp  (+1 more)
server/classes/states/: EstadoCampoMovil.h  EstadoInternoCampoMovil.h  EstadoInternoNivel.h
server/config/: backup.json  config.json
server/config/fondos/: fondos1.json  fondos2.json
(+21 files in other folders)
